--- a/roles/v2ray/defaults/main.yml
+++ b/roles/v2ray/defaults/main.yml
@@ -8,18 +8,17 @@ wrt_v2ray_socks_port: 21080     # avoid port overlap with shadowsocks
 wrt_v2ray_socks_addr: 127.0.0.1
 
 wrt_v2ray_logging: false
+wrt_v2ray_debug: false
 
 wrt_v2ray_domains:
   - example.com
 
-## common http parameters:
+## http parameters
 wrt_v2ray_web_port: 443
 wrt_v2ray_web_path: /
 
-## common encryption parameters:
+## encryption parameters
 wrt_v2ray_uuid: aaa-111-222-333-4444
-wrt_v2ray_altids: 4
-wrt_v2ray_security: aes-128-gcm
 
 wrt_v2ray_dns_servers:
   - 1.1.1.1
