--- a/roles/wireguard/templates/wireguard.conf
+++ b/roles/wireguard/templates/wireguard.conf
@@ -1,15 +1,15 @@
 ## wireguard {{ peers.0.name |d('peer') if peers |d([],true) else 'peer' }}.conf
 [Interface]
 PrivateKey = {{ key }}
-Address = {{ [addr] |flatten |join(', ') }}
+Address = {{ [addr] |flatten |select |join(', ') }}
 {% if port |int %}
 ListenPort = {{ port }}
 {% endif %}
 {% if mtu |int %}
 MTU = {{ mtu }}
 {% endif %}
-{% if metric is not none %}
-PostUp = /opt/usr/sbin/wg-setmetric {{ dev }} {{ metric |int }}
+{% if metric |int %}
+PostUp = /opt/usr/sbin/wg-setmetric {{ net.dev }} {{ metric |int }}
 {% endif %}
 {% for peer in peers %}
 
@@ -21,7 +21,7 @@ PostUp = /opt/usr/sbin/wg-setmetric {{ dev }} {{ metric |int }}
 {% if peer.psk |d('') %}
 {{ comment }}PresharedKey = {{ peer.psk }}
 {% endif %}
-{{ comment }}AllowedIPs = {{ peer.ips |d([],true) |flatten |join(', ') }}
+{{ comment }}AllowedIPs = {{ peer.ips |d([],true) |flatten |select |join(', ') }}
 {% if peer.host |d('') %}
 {{ comment }}Endpoint = {{ peer.host }}:{{ peer.port |d(port, true) }}
 {% endif %}
