--- a/roles/wireguard/defaults/main.yml
+++ b/roles/wireguard/defaults/main.yml
@@ -1,10 +1,7 @@
 ---
 # defaults for ivansible.wrt_wireguard
 
-wrt_wg_dev: wg0
-wrt_wg_port: 0
-
-wrt_wg_default_net: ~
+wrt_wg_devices: []  # {wgN: default_net, ...}
 
 wrt_wg_nets: []
 # - name: net1         - name of subnet (REQUIRED)
@@ -13,6 +10,8 @@ wrt_wg_nets: []
 #   pub: ppp           - local public key for subnet, informational (optional)
 #   mtu: 0             - MTU for subnet (default: wrt_wg_mtu)
 #   keepalive: 0       - keep-alive (sec) on subnet (default: wrt_wg_keepalive)
+#   dev: ~             - device to set metric on
+#   metric: 0
 #   peers:             - list of peers on subnet (REQUIRED)
 #     - name: peer1      - peer name, informational (REQUIRED)
 #       active: true     - optional flag (default: true)
@@ -21,20 +20,19 @@ wrt_wg_nets: []
 #       psk: zzz         - preshared key (optional)
 #       ips: [ip/mask]   - allowed IPs, list of ip/mask pairs
 #       host: ip         - IP address of endpoint (optional)
-#       port: port       - port of endpoint, optional, defaults to lin_wg_port
+#       port: port       - port of endpoint, optional, defaults to wrt_wg_port
 
 ## defaults for all subnets
 wrt_wg_mtu: 0
 wrt_wg_keepalive: 0
 wrt_wg_addr: ~
+wrt_wg_port: 0
 wrt_wg_metric: ~
 
 ## commands to generate keys:
 ## wg genkey | tee key | wg pubkey; cat key
 ## wg genpsk
 wrt_wg_key: ~
-wrt_wg_pub: ~
-wrt_wg_psk: ~
 
 wrt_wg_prefer_userspace: false
 
